--- a/submission/Makefile
+++ b/submission/Makefile
@@ -5,4 +5,4 @@ submit:
 
 
 submit-bea:
-	dts challenges submit --impersonate 1639 --challenge all --retire-same-label
+	dts challenges submit --impersonate 1639 --challenge all --retire-same-label --buildx
